added pallet2 as background to make cards stand out

--- a/volun-tinder/components/swipeComponents/ContactCard/contactCard.module.css
+++ b/volun-tinder/components/swipeComponents/ContactCard/contactCard.module.css
@@ -1,5 +1,5 @@
 .contactCard {
-  border: 2px solid coral;
+  background-color: var(--palette2);
   border-radius: 20px;
   width: 500px;
   margin: 20px auto;
