--- a/volun-tinder/components/quizComponents/AnswerChoice/answerChoice.module.css
+++ b/volun-tinder/components/quizComponents/AnswerChoice/answerChoice.module.css
@@ -1,11 +1,17 @@
 .answerChoice {
+  text-align: center;
   list-style: none;
-  margin: 0;
-  padding: 10px 0;
+  width: 400px;
+  margin: 10px;
+  padding: 10px;
   cursor: pointer;
+  border: darkcyan 1px solid;
+  border-radius: 20px;
+  background-color: whitesmoke;
 }
 
 li.answerChoice:hover {
   color: var(--palette1);
   font-weight: bold;
+  background-color: rgba(0, 139, 139, 0.2);
 }
