updated layout added minimal styling

--- a/volun-tinder/components/inputComponent/inputComponent.module.css
+++ b/volun-tinder/components/inputComponent/inputComponent.module.css
@@ -1,10 +1,15 @@
 #InputComponent {
   text-align: left;
-
   width: 80vw;
   margin: 50px auto;
+  overflow: auto;
 }
 
-.label {
-  font-size: 48px;
+.input {
+  width: 500px;
+  height: 2vw;
+}
+
+#briefBio {
+  height: 20vw;
 }
