initial styling added to the button and input fields

--- a/volun-tinder/components/inputComponent/inputComponent.module.css
+++ b/volun-tinder/components/inputComponent/inputComponent.module.css
@@ -8,8 +8,15 @@
 .input {
   width: 500px;
   height: 2vw;
+  border-radius: 10px;
 }
 
-#briefBio {
-  height: 20vw;
+.button {
+  width: 160px;
+  height: 3em;
+  border-radius: 32px;
+  background-color: purple;
+  color: white;
+  font-weight: bold;
+  text-align: center;
 }
