--- a/volun-tinder/components/inputComponent/inputComponent.module.css
+++ b/volun-tinder/components/inputComponent/inputComponent.module.css
@@ -5,10 +5,15 @@
   overflow: auto;
 }
 
+.form {
+  padding: 20px;
+}
+
 .input {
   width: 500px;
   height: 2vw;
   border-radius: 10px;
+  padding: 6px;
 }
 
 .button {
@@ -19,4 +24,8 @@
   color: white;
   font-weight: bold;
   text-align: center;
+}
+
+.submitBtnSection {
+  padding-top: 40px;
 }
