--- a/volun-tinder/components/inputComponent/inputComponent.module.css
+++ b/volun-tinder/components/inputComponent/inputComponent.module.css
@@ -9,6 +9,14 @@
   padding: 20px;
 }
 
+.section {
+  background-color: #814987;
+  border-radius: 20px;
+  width: 56vh;
+  padding: 20px;
+  margin: 40px;
+}
+
 .input {
   width: 500px;
   height: 2vw;
@@ -18,9 +26,9 @@
 
 .button {
   width: 160px;
-  height: 3em;
+  height: 4em;
   border-radius: 32px;
-  background-color: purple;
+  background-color: #814987;
   color: white;
   font-weight: bold;
   text-align: center;
