--- a/volun-tinder/components/swipeComponents/ContactCard/contactCard.module.css
+++ b/volun-tinder/components/swipeComponents/ContactCard/contactCard.module.css
@@ -1,11 +1,11 @@
 .contactCard {
   /* background-color: var(--palette2); */
-  background-color: rgba(240, 75, 75, 0.2);
-  border: coral 2px solid;
+  background-color: #814987;
+  border: #81ffef 2px solid;
   border-radius: 20px;
   width: 500px;
   margin: 20px auto;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
 }
 
