--- a/volun-tinder/components/searchcomponent/OrgCard/orgCard.module.css
+++ b/volun-tinder/components/searchcomponent/OrgCard/orgCard.module.css
@@ -2,3 +2,15 @@
   height: 150px;
   width: auto;
 }
+
+.card {
+  /* background-color: var(--palette2); */
+  background-color: #814987;
+  border: #81ffef 4px solid;
+  border-radius: 20px;
+  width: 500px;
+  margin: 20px auto;
+  padding: 20px;
+  color: whitesmoke;
+  text-align: center;
+}
