--- a/volun-tinder/components/inputComponent/inputComponent.module.css
+++ b/volun-tinder/components/inputComponent/inputComponent.module.css
@@ -41,15 +41,28 @@
   width: 160px;
   height: 4em;
   border-radius: 32px;
-  background-color: #814987;
-  color: white;
+  background-color: #e3bbe7;
+  color: #47294b;
   font-weight: bold;
   text-align: center;
-  border: #f067b4 2px solid;
-  position: absolute;
-  left: 62vh;
+  margin: 20px;
+}
+
+.button:hover {
+  background-color: #9f5aa7;
+  color: rgb(92, 85, 85);
+  cursor: pointer;
+}
+
+#submitButton {
+  margin: 0 auto;
 }
 
 .submitBtnSection {
   padding-top: 10px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
 }
