turned nav bar white just for interim

--- a/volun-tinder/components/Header/header.module.css
+++ b/volun-tinder/components/Header/header.module.css
@@ -8,7 +8,7 @@
   padding: 5px;
   margin: 0 auto;
   width: 80vw;
-  background-color: #e3bbe7;
+  background-color: white;
   border-radius: 10px;
 }
 
