--- a/volun-tinder/components/Header/header.module.css
+++ b/volun-tinder/components/Header/header.module.css
@@ -14,7 +14,7 @@
 
 .navLink {
   text-decoration: none;
-  color: rgb(92, 85, 85);
+  color: black;
   padding: 5px;
   /* color: #e3bbe7; */
   /* border-radius: 32px;
