--- a/volun-tinder/components/searchcomponent/Search/search.module.css
+++ b/volun-tinder/components/searchcomponent/Search/search.module.css
@@ -17,3 +17,15 @@
   color: whitesmoke;
   text-align: center;
 }
+
+.card:hover {
+  cursor: pointer;
+}
+
+.searchContainer {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
