--- a/volun-tinder/libs/global.css
+++ b/volun-tinder/libs/global.css
@@ -13,3 +13,25 @@
   display: block;
   margin-top: 30px;
 }
+
+#homeCopy {
+  text-align: center;
+  padding: 50px;
+}
+
+#quizButton {
+  border-radius: 32px;
+  text-decoration: none;
+  width: 200px;
+  height: 40px;
+  padding: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#logoNav {
+  width: 90px;
+  padding: 10px;
+}
