quiz now higher on the page

--- a/volun-tinder/components/quizComponents/QuestionDisplay/questionDisplay.module.css
+++ b/volun-tinder/components/quizComponents/QuestionDisplay/questionDisplay.module.css
@@ -1,7 +1,7 @@
 .questionDisplay {
   background-color: #814987;
-  width: 500px;
-  margin: 40vh auto;
+  width: 70vw;
+  margin: 10vh auto;
   padding: 20px;
   border-radius: 20px;
   border: #81ffef 4px solid;
