--- a/volun-tinder/components/searchcomponent/SearchInput/searchInput.module.css
+++ b/volun-tinder/components/searchcomponent/SearchInput/searchInput.module.css
@@ -2,7 +2,9 @@
   height: 2vw;
   border-radius: 10px;
   padding: 10px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   width: 200px;
   text-align: center;
+  border: #814987 2px solid;
 }
