--- a/volun-tinder/components/searchcomponent/Search/search.module.css
+++ b/volun-tinder/components/searchcomponent/Search/search.module.css
@@ -12,7 +12,7 @@
   background-color: #814987;
   border: #81ffef 4px solid;
   border-radius: 20px;
-  width: 500px;
+  width: 60wv;
   margin: 20px auto;
   padding: 20px;
   /* color: rgb(184, 157, 157); */
@@ -38,4 +38,11 @@
   width: 80vw;
   margin: 0 auto;
   padding-top: 20px;
+}
+
+@media only screen and (max-width: 530px) {
+  .orgImg {
+    height: 75px;
+    width: auto;
+  }
 }
