assorted media queries on images and other quick wins

--- a/volun-tinder/components/searchcomponent/OrgCard/orgCard.module.css
+++ b/volun-tinder/components/searchcomponent/OrgCard/orgCard.module.css
@@ -25,6 +25,10 @@
   margin: 20px;
 }
 
+#quizLink {
+  text-decoration: none;
+}
+
 .button:hover {
   background-color: #9f5aa7;
   color: rgb(92, 85, 85);
