--- a/volun-tinder/components/searchcomponent/Search/search.module.css
+++ b/volun-tinder/components/searchcomponent/Search/search.module.css
@@ -12,7 +12,7 @@
   background-color: #814987;
   border: #81ffef 4px solid;
   border-radius: 20px;
-  width: 60wv;
+  width: 60vw;
   margin: 20px auto;
   padding: 20px;
   /* color: rgb(184, 157, 157); */
