--- a/volun-tinder/libs/global.css
+++ b/volun-tinder/libs/global.css
@@ -1,13 +1,12 @@
 * {
+  /* border: 1px solid pink; */
 
-  border: 1px solid pink;
-
-  font-family: "Capriola", sans-serif;
+  font-family: 'Capriola', sans-serif;
 }
 
 #homeLogo {
   text-align: center;
-  padding: 20px;
+  padding: 5px;
   width: 256px;
   margin-left: auto;
   margin-right: auto;
@@ -17,7 +16,9 @@
 
 #homeCopy {
   text-align: center;
-  padding: 50px;
+  padding: 25px;
+  width: 40vw;
+  margin: 0 auto;
 }
 
 #quizButton {
@@ -30,10 +31,21 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  cursor: pointer;
 }
 
 #logoNav {
   width: 90px;
   padding: 10px;
+}
 
+@media only screen and (max-width: 530px) {
+  #homeLogo {
+    height: auto;
+    width: 60vw;
+  }
+  #homeCopy {
+    width: 90vw;
+    margin: 0 auto;
+  }
 }
