--- a/volun-tinder/components/quizComponents/AnswerChoice/answerChoice.module.css
+++ b/volun-tinder/components/quizComponents/AnswerChoice/answerChoice.module.css
@@ -1,8 +1,8 @@
 .answerChoice {
   text-align: center;
   list-style: none;
-  width: 400px;
-  margin: 10px;
+  width: 80%;
+  margin: 10px auto;
   padding: 10px;
   cursor: pointer;
   border: darkcyan 1px solid;
