added swipeLeft fx and totalSwipes in matchReducer so that button to see matches only shows up once swiping is done; before, it showed up early

--- a/volun-tinder/components/swipeComponents/ReactSwipeCard/reactSwipeCard.module.css
+++ b/volun-tinder/components/swipeComponents/ReactSwipeCard/reactSwipeCard.module.css
@@ -45,6 +45,19 @@
   padding: 5px 0;
 }
 
+#matchButton {
+  border-radius: 32px;
+  text-align: center;
+  cursor: pointer;
+  background-color: #81ffef;
+  margin: 20px;
+  padding: 10px 20px;
+  font-weight: bold;
+}
+#matchButton:hover {
+  background-color: #9f5aa7;
+}
+
 @media only screen and (max-width: 530px) {
   .subHeading {
     font-size: 90%;
