--- a/volun-tinder/components/swipeComponents/MatchList/matchList.module.css
+++ b/volun-tinder/components/swipeComponents/MatchList/matchList.module.css
@@ -2,9 +2,15 @@
   text-align: center;
 }
 
+#matchListIntro {
+  margin: 20px auto;
+  width: 60vw;
+}
+
 #resetLink {
-  text-decoration: underline;
+  /* text-decoration: underline; */
   font-weight: bold;
+  color: black;
 }
 
 .resetP {
@@ -12,5 +18,16 @@
   border-radius: 20px;
   padding: 10px;
   text-align: center;
-  width: 80vw;
+  width: 60vw;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 530px) {
+  .resetP {
+    font-size: 12.8px;
+    width: 80vw;
+  }
+  #matchListIntro {
+    width: 80vw;
+  }
 }
