--- a/volun-tinder/components/searchcomponent/OrgCard/orgCard.module.css
+++ b/volun-tinder/components/searchcomponent/OrgCard/orgCard.module.css
@@ -25,6 +25,11 @@
   margin: 20px;
 }
 
+.contactLink {
+  color: whitesmoke;
+  padding-bottom: 10px;
+}
+
 #quizLink {
   text-decoration: none;
 }
