--- a/volun-tinder/components/quizComponents/QuestionDisplay/questionDisplay.module.css
+++ b/volun-tinder/components/quizComponents/QuestionDisplay/questionDisplay.module.css
@@ -1,7 +1,7 @@
 .questionDisplay {
   background-color: #814987;
   width: 70vw;
-  margin: 10vh auto;
+  margin: 25px auto;
   padding: 20px;
   border-radius: 20px;
   border: #81ffef 4px solid;
@@ -20,5 +20,9 @@
 @media only screen and (max-width: 530px) {
   .questionText {
     font-size: 100%;
+  }
+  .questionDisplay {
+    margin: 15px auto;
+    width: 80vw;
   }
 }
