--- a/volun-tinder/components/quizComponents/QuizApp/quizApp.module.css
+++ b/volun-tinder/components/quizComponents/QuizApp/quizApp.module.css
@@ -2,5 +2,20 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-content: center;
   margin: 0;
+}
+
+.quizIntro {
+  text-align: center;
+  width: 70vw;
+  margin: 0 auto;
+  padding-top: 30px;
+}
+
+@media only screen and (max-width: 530px) {
+  .quizIntro {
+    font-size: 100%;
+    width: 80vw;
+  }
 }
