--- a/volun-tinder/components/Footer/footer.module.css
+++ b/volun-tinder/components/Footer/footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   flex-direction: row;
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
