--- a/volun-tinder/libs/global.css
+++ b/volun-tinder/libs/global.css
@@ -2,6 +2,12 @@
   font-family: "Capriola", sans-serif;
 }
 
+#layoutContainer {
+  height: 100pc;
+  margin: 0;
+  /* padding-bottom: 6vh; */
+}
+
 #homeLogo {
   text-align: center;
   padding: 5px;
