--- a/volun-tinder/components/Header/header.module.css
+++ b/volun-tinder/components/Header/header.module.css
@@ -1,8 +1,8 @@
-.navLinksContainer {
+.header {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-content: flex-end;
+  justify-content: space-between;
+  align-items: flex-end;
   padding: 5px;
   margin: 0 auto;
   width: 100%;
@@ -17,6 +17,7 @@
 
 #menuLink {
   color: black;
+  padding-bottom: 5px;
   margin: 0 5vw;
   font-weight: bold;
   font-size: 120%;
@@ -32,18 +33,37 @@
   background-color: #9f5aa7;
 }
 
-/* .navLink {
+.fullNavMenu {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 5px;
+  margin: 0 auto;
+  width: 100%;
+  background-color: #81ffef;
+}
+
+.navLink {
   text-decoration: none;
   color: black;
-  padding: 5px;
-  margin: auto;
+  padding: 10px;
+  margin: 25px 1vw;
   text-align: center;
+  font-weight: bold;
 }
 
 .navLink:hover {
   background-color: #9f5aa7;
-  color: #e3bbe7;
-  padding: 5px;
+  color: whitesmoke;
   border-radius: 10px;
   cursor: pointer;
-} */
+  font-weight: normal;
+}
+
+@media only screen and (max-width: 530px) {
+  #logoNav {
+    margin: 5px 5vw;
+    height: 100px;
+    width: auto;
+  }
+}
