--- a/volun-tinder/libs/global.css
+++ b/volun-tinder/libs/global.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Capriola", sans-serif;
+  font-family: 'Capriola', sans-serif;
 }
 
 #homeLogo {
@@ -9,7 +9,7 @@
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 30px;
+  margin-top: 10vh;
 
   -webkit-animation: heartbeat 1.5s ease-in-out 3 both;
   animation: heartbeat 1.5s ease-in-out 3 both;
@@ -20,6 +20,9 @@
   padding: 25px;
   width: 40vw;
   margin: 0 auto;
+  font-weight: bold;
+  font-size: 150%;
+  color: black;
 }
 
 #homeButtons {
@@ -27,6 +30,8 @@
   flex-direction: row;
   width: 50vw;
   margin: 0 auto;
+  margin-bottom: 10vh;
+  color: black;
 }
 
 .homePageButton {
