--- a/volun-tinder/components/SwipeComponents/MatchList/matchList.module.css
+++ b/volun-tinder/components/SwipeComponents/MatchList/matchList.module.css
@@ -1,10 +1,20 @@
 #matchList {
   text-align: center;
+  margin: 5vh auto;
+}
+
+#matchListHeader {
+  width: 80vw;
+  font-weight: bold;
+  padding-bottom: 15px;
+  margin: 0 auto;
+  padding-top: 20px;
 }
 
 #matchListIntro {
-  margin: 20px auto;
+  margin: 0 auto;
   width: 60vw;
+  padding-bottom: 20px;
 }
 
 #resetLink {
