a few quick wins, and a start on the org card styling tweaks in org list

--- a/volun-tinder/components/KnowledgeBase/knowledgeBase.module.css
+++ b/volun-tinder/components/KnowledgeBase/knowledgeBase.module.css
@@ -14,4 +14,16 @@
 
 .volGuide {
   padding: 5vh;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.volGuideHeader {
+  font-weight: bold;
+}
+
+#usefulLinks {
+  margin: 0 auto;
+  text-align: center;
+  width: 300px;
 }
