--- a/volun-tinder/components/QuizComponents/AnswerChoice/answerChoice.module.css
+++ b/volun-tinder/components/QuizComponents/AnswerChoice/answerChoice.module.css
@@ -8,6 +8,7 @@
   border: darkcyan 1px solid;
   border-radius: 20px;
   background-color: whitesmoke;
+  color: black;
 }
 
 li.answerChoice:hover {
