--- a/volun-tinder/components/Searchcomponent/OrgCard/orgCard.module.css
+++ b/volun-tinder/components/Searchcomponent/OrgCard/orgCard.module.css
@@ -1,6 +1,16 @@
 .orgImg {
   height: 150px;
   width: auto;
+  border-radius: 10px;
+}
+
+.orgHeader {
+  color: white;
+  font-weight: bold;
+}
+
+.contactLink {
+  color: white;
 }
 
 .card {
@@ -11,13 +21,12 @@
   width: 60vw;
   margin: 20px auto;
   padding: 20px;
-  color: whitesmoke;
+  color: white;
   text-align: center;
 
   -webkit-animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
   animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-
 }
 
 /* ----------------------------------------------
@@ -59,14 +68,15 @@
 }
 
 .button {
-  width: 160px;
-  height: 4em;
+  /* width: 160px; */
+  /* height: 4em; */
   border-radius: 32px;
   background-color: #e3bbe7;
   color: #47294b;
   font-weight: bold;
   text-align: center;
   margin: 20px;
+  padding: 5px 10px;
 }
 
 #quizLink {
