--- a/volun-tinder/components/Searchcomponent/Search/search.module.css
+++ b/volun-tinder/components/Searchcomponent/Search/search.module.css
@@ -2,6 +2,11 @@
   height: 150px;
   width: auto;
   text-align: center;
+  border-radius: 10px;
+}
+.orgHeader {
+  color: white;
+  font-weight: bold;
 }
 .ul {
   list-style-type: none;
