--- a/volun-tinder/components/Searchcomponent/SearchInput/searchInput.module.css
+++ b/volun-tinder/components/Searchcomponent/SearchInput/searchInput.module.css
@@ -1,10 +1,8 @@
 .searchBox {
-  height: 2vw;
   border-radius: 10px;
   padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 20px auto;
   width: 200px;
   text-align: center;
-  border: #814987 2px solid;
+  border: #814987 3px solid;
 }
