--- a/volun-tinder/components/AuthComponents/Login/login.module.css
+++ b/volun-tinder/components/AuthComponents/Login/login.module.css
@@ -8,11 +8,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border: #81ffef 4px solid;
 }
 
 .loginP {
   text-align: center;
-  padding-bottom: 20px;
+  padding: 20px;
+  width: 80%;
+  color: white;
+  margin: 0 auto;
 }
 
 .loginForm {
@@ -28,37 +32,60 @@
   flex-direction: row;
   justify-content: space-between;
   align-content: center;
+  font-size: 18px;
 }
 
 .buttonContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-content: center;
+  padding-top: 20px;
+}
+
+.signInButton {
+  border-radius: 32px;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  background-color: #81ffef;
+  margin: 0 auto;
+  padding: 10px 20px;
+  color: black;
+  width: 150px;
+}
+
+.signInButton:hover {
+  background-color: white;
 }
 
 .button {
-  width: 160px;
-  height: 4em;
+  width: 300px;
   border-radius: 32px;
-  background-color: #e3bbe7;
-  color: #47294b;
   font-weight: bold;
   text-align: center;
-  margin: 20px;
+  cursor: pointer;
+  background-color: #81ffef;
+  margin: 0 auto;
+  padding: 10px 20px;
+  color: black;
 }
 
 .button:hover {
-  background-color: #9f5aa7;
-  color: rgb(92, 85, 85);
-  cursor: pointer;
+  background-color: white;
 }
 
 .input {
   width: 80%;
-  height: 2vw;
   border-radius: 10px;
   padding: 6px;
   margin-bottom: 20px;
   margin-left: 10px;
+  color: black;
+}
+
+.registerP {
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
