form fixed - basic styling neatened, white input text fixed, buttons re-styled, inputs re-sized and evened out

--- a/volun-tinder/components/AuthComponents/LogoutButton/logoutButton.module.css
+++ b/volun-tinder/components/AuthComponents/LogoutButton/logoutButton.module.css
@@ -1,15 +1,14 @@
 .logoutButton {
-  width: 160px;
-  height: 4em;
   border-radius: 32px;
-  background-color: #e3bbe7;
-  color: #47294b;
   font-weight: bold;
   text-align: center;
-  margin: 20px;
+  cursor: pointer;
+  background-color: #81ffef;
+  margin: 0 auto;
+  padding: 10px 20px;
+  color: black;
+  width: 150px;
 }
 .logoutButton:hover {
   background-color: #9f5aa7;
-  color: rgb(92, 85, 85);
-  cursor: pointer;
 }
