--- a/volun-tinder/components/AuthComponents/Login/login.module.css
+++ b/volun-tinder/components/AuthComponents/Login/login.module.css
@@ -13,7 +13,10 @@
 
 .loginP {
   text-align: center;
-  padding: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 30px;
   width: 80%;
   color: white;
   margin: 0 auto;
@@ -75,6 +78,22 @@
   background-color: white;
 }
 
+.googleButton {
+  width: 250px;
+  border-radius: 32px;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  background-color: #81ffef;
+  margin: 0 auto;
+  padding-right: 20px;
+  color: black;
+}
+
+.googleButton:hover {
+  background-color: white;
+}
+
 .input {
   width: 80%;
   border-radius: 10px;
@@ -88,4 +107,9 @@
   margin: 0 auto;
   padding-top: 20px;
   padding-bottom: 10px;
+}
+
+#googleLogo {
+  height: 40px;
+  width: auto;
 }
