--- a/volun-tinder/components/InputComponent/inputComponent.module.css
+++ b/volun-tinder/components/InputComponent/inputComponent.module.css
@@ -1,10 +1,29 @@
 .sectionHeader {
-  margin-top: 20px;
-  margin-bottom: 30px;
+  margin: 15px 0;
+  color: white;
+  padding-bottom: 10px;
+}
+
+.formSection {
+  margin: 20px auto;
+  width: 80%;
+  padding-bottom: 15px;
 }
 
 .header {
   color: black;
+  margin: 0 auto;
+  width: 60%;
+  padding-top: 5vh;
+  text-align: center;
+}
+
+.formDescrip {
+  color: black;
+  margin: 0 auto;
+  width: 70%;
+  text-align: center;
+  padding-top: 20px;
 }
 
 .form {
@@ -27,35 +46,34 @@
 
 .dropdown {
   width: 50%;
-  height: 2vw;
   border-radius: 10px;
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 6px;
+  margin: 10px auto;
+  color: black;
 }
 
 .input {
-  width: 80%;
-  height: 2vw;
+  width: 100%;
   border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 20px;
+  padding: 6px;
+  margin: 10px auto;
+  color: black;
 }
 
 .button {
-  width: 160px;
-  height: 4em;
   border-radius: 32px;
-  background-color: #e3bbe7;
-  color: #47294b;
   font-weight: bold;
   text-align: center;
-  margin: 20px;
+  cursor: pointer;
+  background-color: #81ffef;
+  margin: 0 auto;
+  padding: 10px 20px;
+  color: black;
+  width: 150px;
 }
 
 .button:hover {
   background-color: #9f5aa7;
-  color: rgb(92, 85, 85);
-  cursor: pointer;
 }
 
 #submitButton {
@@ -63,7 +81,6 @@
 }
 
 .submitBtnSection {
-  padding-top: 10px;
   width: 100vw;
   display: flex;
   flex-direction: column;
