--- a/volun-tinder/components/searchcomponent/Search/search.module.css
+++ b/volun-tinder/components/searchcomponent/Search/search.module.css
@@ -1,30 +1,18 @@
-.searchHeader {
-  font-weight: bold;
-  padding-top: 5vh;
-}
-
 .orgImg {
   height: 150px;
   width: auto;
   text-align: center;
-  border-radius: 10px;
-  padding-bottom: 10px;
-}
-.orgHeader {
-  color: white;
-  font-weight: bold;
 }
 .ul {
   list-style-type: none;
   color: white;
-  padding: 0;
 }
 .card {
   /* background-color: var(--palette2); */
   background-color: #814987;
   border: #81ffef 4px solid;
   border-radius: 20px;
-  width: 50vw;
+  width: 60vw;
   margin: 20px auto;
   padding: 20px;
   /* color: rgb(184, 157, 157); */
@@ -49,23 +37,12 @@
   text-align: center;
   width: 80vw;
   margin: 0 auto;
-  padding: 10px;
-  color: black;
-}
-
-.clickToExpand {
-  color: white;
-  margin: 0;
-  font-size: 12px;
-  opacity: 70%;
+  padding-top: 20px;
 }
 
 @media only screen and (max-width: 530px) {
   .orgImg {
     height: 75px;
     width: auto;
-  }
-  .card {
-    width: 70vw;
   }
 }
