--- a/volun-tinder/components/searchcomponent/SearchInput/searchInput.module.css
+++ b/volun-tinder/components/searchcomponent/SearchInput/searchInput.module.css
@@ -1,8 +1,10 @@
 .searchBox {
+  height: 2vw;
   border-radius: 10px;
   padding: 10px;
-  margin: 20px auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
   width: 200px;
   text-align: center;
-  border: #814987 3px solid;
+  border: #814987 2px solid;
 }
