--- a/volun-tinder/libs/global.css
+++ b/volun-tinder/libs/global.css
@@ -1,5 +1,7 @@
 * {
-  font-family: 'Capriola', sans-serif;
+  /* border: 1px solid pink; */
+
+  font-family: "Capriola", sans-serif;
 }
 
 #homeLogo {
@@ -9,10 +11,10 @@
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 10vh;
+  margin-top: 30px;
 
-  -webkit-animation: heartbeat 1.5s ease-in-out 3 both;
-  animation: heartbeat 1.5s ease-in-out 3 both;
+  -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+  animation: heartbeat 1.5s ease-in-out infinite both;
 }
 
 #homeCopy {
@@ -20,9 +22,6 @@
   padding: 25px;
   width: 40vw;
   margin: 0 auto;
-  font-weight: bold;
-  font-size: 150%;
-  color: black;
 }
 
 #homeButtons {
@@ -30,8 +29,6 @@
   flex-direction: row;
   width: 50vw;
   margin: 0 auto;
-  margin-bottom: 10vh;
-  color: black;
 }
 
 .homePageButton {
